fix(multiselect): don't wrap the text inside a multiselect

--- a/app/assets/stylesheets/polaris_view_components.css
+++ b/app/assets/stylesheets/polaris_view_components.css
@@ -838,8 +838,10 @@
 .Polaris-MultiSelect .Polaris-Button__Content {
   justify-content: flex-start;
   font-weight: inherit;
+  overflow: hidden;
 }
 .Polaris-MultiSelect .Polaris-Button__Content .Polaris-Button__Text {
   flex-grow: 1;
   text-align: left;
+  white-space: nowrap;
 }
