--- a/app/assets/stylesheets/polaris_view_components/multi_select.pcss
+++ b/app/assets/stylesheets/polaris_view_components/multi_select.pcss
@@ -10,10 +10,12 @@
     .Polaris-Button__Content {
         justify-content: flex-start;
         font-weight: inherit;
+        overflow: hidden;
 
         .Polaris-Button__Text {
             flex-grow: 1;
             text-align: left;
+            white-space: nowrap;
         }
     }
 }
